# iwalk

./: .gitignore  Makefile  README.md  setup.cfg  setup.py  tox.ini
.tox/py32/: .tox-info.json
doc/: CONTRIBUTING.md  DEV-NOTE-keepme.txt  Design.md  Developer-Guide.md  Future-Additions.md  Interal-Traversal-Evaluation.md  Supporting-Backports.md  Test-Plan.md  layout.txt
scripts/: iwalk-tree.py
src/iwalk/: __init__.py  core.py  patterns.py
src/iwalk/compat/py27/: iwalk.py
src/iwalk/compat/py32/: iwalk.py
src/iwalk/compat/py39/: iwalk.py
tests/: test_backwards_compatibility.py  test_global_patterns.py  test_ignore_checker.py  test_ignore_specs.py  test_integration_walk.py  test_iwalk_tree_cli.py  test_read_patterns.py  test_repo_exclude.py  test_walk.py
use-case/: stree.py
