[metadata]
name = iwalk
version = 0.1.0
author = Philip Dye
author_email = phdye@acm.org
description = A drop-in replacement for os.walk() that respects .gitignore and other ignore rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/iwalk
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=2.7
install_requires =
    pathspec

[options.package_data]
iwalk = py.typed
